# heart_cardiac_mri_image_processing

./: Marching_cubes_script.ipynb  Marching_cubes_v2.ipynb  config.py  dicom_to_mp4.ipynb  mri_image_processing.yaml  patient_mask_filepaths.xlsx  process_dicom_to_mp4_tweaked.ipynb  scd_patientdata_xlsx.xlsx  segment_and_marching_cubes_vscode_compatible.ipynb
Marching_Cubes/: Marching_Cube_Implement_v1.ipynb  Marching_cubes_script.py  config.py  config_marching.py  ejection_fraction_patient_metrics_marching_cubes.xlsx  patient_metrics_marching_cubes.xlsx  performance_eval.py
Otsu+Morphology/: .gitignore  analysis_results.xlsx  diagrams.pptx  ejection_fraction_patient_metrics_otsu.xlsx  ejection_fraction_patient_metrics_watershed.xlsx  patient_watershed_results.xlsx  pyproject.toml
Otsu+Morphology/solution_1462/: __init__.py  core.py  data.py  eval.py  metric.py  test.py
annotation/: config.py  gui_annotation.py
data_analysis/: comparison_results.xlsx  dice_and_iou_analysis.ipynb  dice_and_iou_analysis_mahri.ipynb  patient_metrics_analysis.ipynb
edge_detection_and_contours/: analysis_results.xlsx  config.py  edge_detection_results.xlsx  lv_edge_detection_all_patients.ipynb  lv_edge_detection_scrapbook.ipynb  lv_edge_detection_single_image.ipynb  lv_edge_detection_single_pt.ipynb  patient_metrics_edge_detection.xlsx  patient_thresholds.txt  performance_eval.py  scd_patientdata_xlsx_edge.xlsx
motion_tracking/: arrow_length_angle.csv  arrow_lengths_tvl1.csv  motion_tracking_single_set.ipynb  optical_flow_arrow_displacement_table.ipynb  (+2 more)
watershed/: Untitled.ipynb  (+8 more)
(+11651 files in other folders)
